Salesforce Copilot Studio LWC/force-app/main/default/objects/CopilotStudio_Settings__mdt/CopilotStudio_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Copilot Studio Settings</label>
    <pluralLabel>Copilot Studio Settings</pluralLabel>
</CustomObject>