Salesforce Copilot Studio LWC/force-app/main/default/objects/CopilotStudio_Settings__mdt/fields/Function_Key__c.field-meta.xml
<CustomField>
    <fullName>Function_Key__c</fullName>
    <label>Function Key</label>
    <description>Azure Function host key used to authenticate calls to the /api/conversations endpoints.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>