Salesforce Copilot Studio LWC/force-app/main/default/objects/CopilotStudio_Settings__mdt/fields/Streaming_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Streaming_Endpoint__c</fullName>
    <label>Streaming Endpoint (Deprecated)</label>
    <description>Deprecated — no longer used with Direct Connect architecture. Agent communication now uses the Agent Middleware Endpoint. This field is retained for backward compatibility.</description>
    <type>Url</type>
</CustomField>