Salesforce Copilot Studio LWC/force-app/main/default/objects/CopilotStudio_Settings__mdt/fields/Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Token_Endpoint__c</fullName>
    <label>Agent Middleware Endpoint</label>
    <description>Base URL of the Azure Function agent middleware (e.g., https://my-copilot-middleware.azurewebsites.net). The middleware proxies requests to Copilot Studio via the M365 Agents SDK.</description>
    <type>Url</type>
    <required>true</required>
</CustomField>